--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Easy Pet Care</title>
     <link href="styles.css" rel="stylesheet" />
     <link href="general.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="images/logo.svg" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
       rel="stylesheet"
